2026-02-01T01:57:57Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21554612557 # 864
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-01
* notice: last 14d: unq all: 4 4
* notice: prev accum: outdated-unq outdated-all / unq all: 212 279 / 214 281
* notice: next accum: outdated-unq outdated-all / unq all: 212 279 / 216 283
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2026-01-06 2026-01-08]

2026-01-30T01:44:07Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21501373212 # 862
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-30
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 211 278 / 213 280
* notice: next accum: outdated-unq outdated-all / unq all: 212 279 / 214 281
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2026-01-09 2026-01-10 2026-01-11 2026-01-12 2026-01-13 2026-01-14] / [2026-01-24]

2026-01-29T01:43:22Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21462392767 # 861
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-29
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 209 276 / 211 278
* notice: next accum: outdated-unq outdated-all / unq all: 211 278 / 213 280
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +1 +1 -0 -0 / 1 1